Fixing overlap

--- a/src/app/water-section/water/water-add/water-add.component.scss
+++ b/src/app/water-section/water/water-add/water-add.component.scss
@@ -4,8 +4,8 @@
     font-family: 'Baloo', sans-serif;
   }
   [name='beanconqueror-pure-coffee-water'] {
-    max-width: 140px;
-    width: 140px !important;
+    max-width: 130px;
+    width: 130px !important;
   }
   .empirical-water {
     width:120px;
